--- a/Iris_Classification/RandomForrest.ipynb
+++ b/Iris_Classification/RandomForrest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "67aa37af-2b59-4c7a-95c9-7bad45cb5a04",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "14752592-e6fb-4428-b4f7-27b3eabd7f02",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
        "4            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "5fa4faa3-e3b6-4d1e-abb7-82c55f94f358",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "753bdfe3-701c-4761-a6fd-a00db46cdd06",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "70111013-3fea-4c2a-8a59-6112ea27a953",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "ec97c009-c535-4da8-bac9-a4413e336903",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "id": "e55d9d94-5c76-4296-8d74-a0fd65eb25c5",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "id": "12354688-ab4a-4d33-b17f-e637c8710a33",
    "metadata": {},
    "outputs": [],
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 13,
    "id": "a94790df-fc22-449d-9086-849ba20609aa",
    "metadata": {},
    "outputs": [],
@@ -897,7 +897,7 @@
     "        n_samples, n_features = X.shape\n",
     "        if cur_depth <= self.max_depth and n_samples >= self.min_samples:\n",
     "            best_split = self.find_best_split(dataset, n_features, k)\n",
-    "            if best_split[\"gain\"]:\n",
+    "            if best_split[\"gain\"] != -1:\n",
     "                left_node = self.build_tree(best_split[\"left_dataset\"],k, cur_depth + 1)\n",
     "                right_node = self.build_tree(best_split[\"right_dataset\"],k, cur_depth + 1)\n",
     "                return Node(best_split[\"feature\"], best_split[\"threshold\"], left_node, \n",
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 14,
    "id": "8386adac-b28a-4db8-bc8b-53589d3e481a",
    "metadata": {},
    "outputs": [],
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 15,
    "id": "88ed4e2e-9d9a-43d2-bae6-cb36bfbf268d",
    "metadata": {},
    "outputs": [],
@@ -981,23 +981,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 23,
    "id": "4e98fd68-8a2a-4ef5-91fb-d02ce41c03f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8333333333333334"
+       "0.9"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = RandomForest(2,7,20)\n",
+    "model = RandomForest(2,40,20)\n",
     "model.fit(X_train, y_train)\n",
     "predictions = model.Predict(X_test)\n",
     "accuracy(y_test, predictions)"
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 17,
    "id": "28eb5cd9-726d-4f36-9072-62e4ce9d2ffc",
    "metadata": {},
    "outputs": [],
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 18,
    "id": "256a65ce-71c8-4d45-b556-96536d6567e1",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1025,7 @@
        "1.0"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,6 +1043,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "833def31-492c-4c45-88fd-4e1b2c40432e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac735c10-c073-4be2-9ac2-8a29f9a145f9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1064,7 +1072,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
